BUGFIX. Errors appear in the browser console about `PanelSnap`
Error:
- Uncaught (in promise) Error: PanelSnap is already initialized in this container, aborting.
- PanelSnap does not support spacing between panels, snapping backwards.

Solution:
- Move the execution of the `scrollbarSnap` function out of the `mousedown` event, since every time it is triggered, the `PanelSnap` is being initialized.
- Remove extra space of `table` element.

References:
- https://www.tutorialrepublic.com/faq/how-to-remove-cellspacing-form-tables-using-css.php

--- a/src/sass/pages/_pages-calendar-1.sass
+++ b/src/sass/pages/_pages-calendar-1.sass
@@ -33,6 +33,9 @@
 				margin-right: 3rem
 				margin-bottom: 1rem
 
+		&__table
+			border-collapse: collapse
+
 		&__title
 			font-size: 3.2rem
 
